crates/pgls_pretty_print/tests/snapshots/multi/tests__circle_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/circle_60.sql
snapshot_kind: text
---
SET extra_float_digits = -1;

CREATE TABLE circle_tbl ( f1 circle );

INSERT INTO circle_tbl VALUES ('<(5,1),3>');

INSERT INTO circle_tbl VALUES ('((1,2),100)');

INSERT INTO circle_tbl VALUES (' 1 , 3 , 5 ');

INSERT INTO circle_tbl VALUES (' ( ( 1 , 2 ) , 3 ) ');

INSERT INTO circle_tbl VALUES (' ( 100 , 200 ) , 10 ');

INSERT INTO circle_tbl VALUES (' < ( 100 , 1 ) , 115 > ');

INSERT INTO circle_tbl VALUES ('<(3,5),0>');

INSERT INTO circle_tbl VALUES ('<(3,5),NaN>');

INSERT INTO circle_tbl VALUES ('<(-100,0),-100>');

INSERT INTO circle_tbl VALUES ('<(100,200),10');

INSERT INTO circle_tbl VALUES ('<(100,200),10> x');

INSERT INTO circle_tbl VALUES ('1abc,3,5');

INSERT INTO circle_tbl VALUES ('(3,(1,2),3)');

SELECT * FROM circle_tbl;

SELECT center(f1) AS center FROM circle_tbl;

SELECT radius(f1) AS radius FROM circle_tbl;

SELECT diameter(f1) AS diameter FROM circle_tbl;

SELECT f1 FROM circle_tbl WHERE radius(f1) < 5;

SELECT f1 FROM circle_tbl WHERE diameter(f1) >= 10;

SELECT
  c1.f1 AS one,
  c2.f1 AS two,
  c1.f1 <-> c2.f1 AS distance
FROM
  circle_tbl
  AS c1,
  circle_tbl
  AS c2
WHERE
  c1.f1 <
  c2.f1 AND
  c1.f1 <-> c2.f1 >
  0
ORDER BY distance,
  area(c1.f1),
  area(c2.f1);
